# AllFlow

./: .gitignore  DEVELOPMENT_LOG.md  LICENSE  README.md  demo_refactored_ot_flow.py  pyproject.toml
.cursor/rules/: README.md  algorithm-implementation.mdc  code-style-standards.mdc  dependency-strategy.mdc  device-compatibility.mdc  documentation-standards.mdc  project-goals.mdc  ref-repo.mdc  tensor-optimization.mdc  testing-coverage.mdc
examples/: basic_usage.py
notebooks/: README.md
src/allflow/: __init__.py
src/allflow/algorithms/: __init__.py  flow_matching.py  ot_flow.py
src/allflow/core/: __init__.py  base.py  interpolation.py  model_interface.py  noise_generators.py  optimal_transport.py  time_sampling.py  vector_field.py
src/allflow/solvers/: __init__.py  base.py  torchdiffeq_solver.py
src/allflow/utils/: __init__.py
tests/: __init__.py  test_boundary_conditions.py  test_flow_matching.py  test_improvements.py  test_init.py  test_integration.py  test_interpolation.py  test_model_interface.py  test_noise_generators.py  test_optimal_transport.py  test_ot_flow_refactored.py  test_solvers_basic.py  test_utils.py  test_vector_field.py
tests/data/: mnist_loader.py
tests/models/: unet.py
